--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,23 @@ time_spreadsheet.xlsx
 ~$time_spreadsheet.xlsx
 part1/counter/
 part1/anecdotes/node_modules/
+# Created by https://www.toptal.com/developers/gitignore/api/react
+# Edit at https://www.toptal.com/developers/gitignore?templates=react
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
+# End of https://www.toptal.com/developers/gitignore/api/react
