--- a/part4/blog-list-app/package.json
+++ b/part4/blog-list-app/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Ludvig Larsson",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.28.0",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^6.7.5"
