--- a/part4/blog-list-app/package.json
+++ b/part4/blog-list-app/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.28.0",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.5"
   }
 }
