--- a/part4/blog-list-app/package.json
+++ b/part4/blog-list-app/package.json
@@ -4,22 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_END=test jest --verbose --runInBand --forceExit"
   },
   "author": "Ludvig Larsson",
   "license": "MIT",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.28.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "http": "^0.0.1-security",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.5"
