--- a/part4/blog-list-app/package.json
+++ b/part4/blog-list-app/package.json
@@ -18,6 +18,7 @@
     "supertest": "^6.3.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.28.0",
