--- a/part4/blog-list-app/package.json
+++ b/part4/blog-list-app/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.5"
   }
