--- a/part4/blog-list-app/package.json
+++ b/part4/blog-list-app/package.json
@@ -7,12 +7,14 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "cross-env NODE_END=test jest --verbose --runInBand --forceExit"
+    "test": "cross-env NODE_END=test jest --verbose --runInBand --forceExit",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "Ludvig Larsson",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "eslint-plugin-cypress": "^2.12.1",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1"
