--- a/part4/blog-list-app/package.json
+++ b/part4/blog-list-app/package.json
@@ -14,9 +14,11 @@
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "prettier": "2.8.1",
     "supertest": "^6.3.1"
   },
   "dependencies": {
