Solution to exercise 7.9: automatic code formatting. Copied bloglist backend/frontend to part7 folder. Added prettier VSCode extension with Format on Save option active.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ sketch
 part3/part3-notes-backend/.env
 part4/notes-backend/.env
 part4/blog-list-app/.env
+part7/bloglist-backend/.env
+part7/bloglist-frontend/.vscode/
